<resources>
    <string name="app_name">Block Party</string>
    <string name="star">star</string>
    <string name="empty_star">empty star</string>
    <string name="level">level</string>
    <string name="levels">levels</string>
    <string name="colors">COLORS</string>
    <string name="my_levels">My Levels</string>
    <string name="create_custom_level">Create Custom Level</string>
    <string name="no_custom_levels">No custom levels saved</string>
    <string name="level_failed">Level Failed</string>
    <string name="you_did_it">You Did It!</string>
    <string name="back_to_menu">back to menu</string>
    <string name="try_again">Try Again</string>
    <string name="next_level">Next Level</string>
    <string name="continue_tutorial">Continue</string>
    <string name="stars">stars</string>
    <string name="you_died">You Died!</string>
    <string name="enemy">enemy</string>
    <string name="player">player</string>
    <string name="goal">goal</string>
    <string name="empty">empty</string>
    <string name="unmovable">unmovable</string>
    <string name="movable">movable</string>
    <string name="save_level_question">Save Level?</string>
    <string name="save_level">Save Level</string>
    <string name="level_not_saved">You have unsaved changes</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="enter_level_name">Enter Level Name</string>
    <string name="level_name">level name</string>
    <string name="cancel">Cancel</string>
    <string name="welcome">welcome</string>
    <string name="selected_block">selected:%1$s</string>
    <string name="edit_level">Edit Level</string>
    <string name="moves_used">Moves Used: %1$d</string>
    <string name="level_completed_in">%1$s Completed in %2$d moves!</string>
    <string name="tutorial_level_completed_in">Completed in %1$d moves!</string>
    <string name="complete_in">Complete in %1$d moves for 3 stars</string>
    <string name="back_button">back button</string>
    <string name="clear_all">Clear All</string>
    <string name="star_count">%1$s Star Count</string>
    <string name="difficulty_star_count">%1$s: %2$d/30</string>
    <string name="level_card">%1$s card</string>
    <string name="level_stars">%1$s stars</string>
    <string name="total_star_progress">%1$d/60 Total</string>
    <string name="difficulty_star_progress">%1$d/%2$d Stars Collected</string>
    <string name="difficulty_text">%1$s text</string>
    <string name="total_star_count">Total Star Count</string>
    <string name="total_difficulty_star_count">Total %1$s Star Count</string>
    <string name="level_builder">Level Builder</string>
    <string name="collection_requirement">Collect %1$s Stars to Unlock</string>
    <string name="palette">palette</string>
    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">HARD</string>
    <string name="tap_anywhere_to_start">Tap anywhere to start</string>
    <string name="movable_tut_2">Push two Movable blocks together and they both disappear!</string>
    <string name="movable_tut_1">This is the Movable block. It can be pushed only by the player.</string>
    <string name="unmovable_tut">This an Obstacle block. It cannot be moved and blocks both the player and enemy.</string>
    <string name="enemy_tut_3">Don\'t let it catch you or it\'s game over!</string>
    <string name="enemy_tut_2">It can only move closer to you and tries to move horizontally first if possible.</string>
    <string name="enemy_tut_1">This is the Enemy block. It moves twice after every player move.</string>
    <string name="goal_tut">This is the Goal block. Move the Player Block here to complete the level.</string>
    <string name="player_tut">Tap a surrounding square to move!</string>
    <string name="loss_tut">Don\'t let the Enemy block catch you!</string>
    <string name="win_tut_1">Earning stars will let you unlock harder levels</string>
    <string name="win_tut_2">Complete levels in as few moves as possible to earn all 3 stars</string>
    <string name="unmovable_tut_2">Use this block to trap the enemy and make it safely to the goal</string>
    <string name="initial_tut_1">Move the Player block to the Goal block to beat the level</string>
    <string name="initial_tut_2">Tap the Goal block to beat the level</string>
    <string name="hint_1">Tap Level builder to build a custom level of your own!</string>
    <string name="hint_2">Earn more stars to unlock harder difficulties</string>
    <string name="hint_3">Tap the gear icon to apply a custom theme</string>
    <string name="hint_4">More Levels coming soon!</string>
    <string name="hint_5">Tired of hints? Disable this window in settings</string>
    <string name="info_tut">This button will show how each block functions</string>
    <string name="restart_tut">This button will restart the level</string>
    <string name="undo_tut">This button will undo your last move</string>
    <string name="tutorial_stage">TUTORIAL_STAGE</string>
    <string name="show_previous_hint">Show previous hint</string>
    <string name="show_next_hint">Show next hint</string>
    <string name="restart">Restart</string>
    <string name="info">Info</string>
    <string name="undo">Undo</string>
    <string name="override">Override</string>
    <string name="override_existing_level">Would you like to override existing level: %1$s or create a new copy?</string>
    <string name="delete_level">Are you sure you want to delete Custom Level: %1$s</string>
    <string name="play">Play</string>
    <string name="delete">Delete</string>
    <string name="change_theme">Change theme</string>
    <string name="block_party">Block Party</string>
    <string name="updated">UPDATED</string>
    <string name="user">USER</string>
    <string name="hints">HINTS</string>
    <string name="hints_on_main_menu">Hints on Main Menu</string>
</resources>
