...
                    .fillMaxHeight()
            ) {
                if (isNewHighScore) {
                    Text(text = "New High Score!")
                    Text(text = "Level $levelName Completed in $movesUsed moves!")
                } else {
                    Text(text = "You Did it!")
                    Text(text = "Level $levelName Completed in $movesUsed moves!")
                }
                Row(
                    verticalAlignment = Alignment.CenterVertically,
                    horizontalArrangement = Arrangement.SpaceEvenly
                ) {
...
